--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,31 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- The content below is for adding Firebase to our project.-->
+    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyA58USQ87fh3FaFF2S2iWQ4xsdjjgwg1NU",
+        authDomain: "chatbox-cdf56.firebaseapp.com",
+        projectId: "chatbox-cdf56",
+        storageBucket: "chatbox-cdf56.appspot.com",
+        messagingSenderId: "990345776593",
+        appId: "1:990345776593:web:c2503745942cc0fe21e4f0",
+        measurementId: "G-F3SPH2BH27"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
